# Isolated crate for the loom model of the commit publish protocol.
#
# loom requires a global `--cfg loom`, which is incompatible with the parent crate's
# dev-dependencies (tokio drops `net` under loom). Keeping the model in a crate whose
# only dependency is loom avoids that conflict entirely.
#
# Run with:  RUSTFLAGS="--cfg loom" cargo test --release   (from this directory)
[package]
name = "loom-model"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
loom = "0.7"

# Standalone: do not get pulled into any parent workspace.
[workspace]
